force-app/main/default/objects/Review__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <formula>HYPERLINK( job_application__r.Candidate__r.Id , job_application__r.Candidate__r.First_Name__c  &amp; &quot; &quot; &amp;  job_application__r.Candidate__r.Last_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate</label>
    <type>Text</type>
</CustomField>