force-app/main/default/objects/Review__c/fields/job_application__c.field-meta.xml
<CustomField>
    <fullName>job_application__c</fullName>
    <label>job application</label>
    <referenceTo>job_application__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>