force-app/main/default/objects/Review__c/validationRules/Rating_Scale_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Scale_Rule</fullName>
    <active>true</active>
    <description>Rating must be from 1 to 5.</description>
    <errorConditionFormula>(Rating__c &lt;1 || Rating__c &gt; 5)</errorConditionFormula>
    <errorMessage>Invalid rating</errorMessage>
</ValidationRule>